front page styling

--- a/src/photos/5/5.md
+++ b/src/photos/5/5.md
@@ -1,7 +1,7 @@
 ---
-featuredImage: "./2.jpg"
-date: "2018-12-15T17:0:0Z"
-title: 'second image'
+featuredImage: "./5.jpg"
+date: "2018-12-08T2:0:0Z"
+title: 'fifth image'
 camera: "Sony a7iii"
 ISO: "100"
 shutter: "1/100"
