formatted dates and added scanner project

--- a/src/photos/10/10.md
+++ b/src/photos/10/10.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./10.jpg"
 fullImage: "./10.jpg"
-date: "2019-02-04T2:18:30Z"
+date: "2019-02-04"
 title: 'Wai Kit'
 camera: "Sony a7iii"
 ISO: "100"
