--- a/src/photos/11/11.md
+++ b/src/photos/11/11.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./11.jpg"
 fullImage: "./11.jpg"
-date: "2019-02-17T2:18:30Z"
+date: "2019-02-17"
 title: 'Lengjai Release'
 camera: "Sony a7iii"
 ISO: "100"
