--- a/src/photos/12/12.md
+++ b/src/photos/12/12.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./12.jpg"
 fullImage: "./12.jpg"
-date: "2019-02-10T2:18:30Z"
+date: "2019-02-10"
 title: 'Harvard Innovation Lab'
 camera: "Sony a7iii"
 ISO: "100"
