--- a/src/photos/7/7.md
+++ b/src/photos/7/7.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./7.jpg"
 fullImage: "./7.jpg"
-date: "2019-01-12T2:00:00Z"
+date: "2019-01-12"
 title: 'Arjun'
 camera: "Sony a7iii"
 ISO: "100"
