--- a/src/photos/8/8.md
+++ b/src/photos/8/8.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./8.jpg"
 fullImage: "./8.jpg"
-date: "2019-01-20T2:00:00Z"
+date: "2019-01-20"
 title: 'First Snow'
 camera: "Sony a7iii"
 ISO: "640"
