--- a/src/photos/9/9.md
+++ b/src/photos/9/9.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./9.jpg"
 fullImage: "./9.jpg"
-date: "2019-01-21T2:18:30Z"
+date: "2019-01-21"
 title: 'Spiral Staircase'
 camera: "Sony a7iii"
 ISO: "200"
