--- a/src/photos/5/5.md
+++ b/src/photos/5/5.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./5.jpg"
 fullImage: "./5.jpg"
-date: "2018-12-08T2:00:00Z"
+date: "2018-12-08"
 title: 'fifth image'
 camera: "Sony a7iii"
 ISO: "100"
