--- a/src/photos/6/6.md
+++ b/src/photos/6/6.md
@@ -1,7 +1,7 @@
 ---
 featuredImage: "./6.jpg"
 fullImage: "./6.jpg"
-date: "2019-01-12T2:00:00Z"
+date: "2019-01-12"
 title: 'Jason'
 camera: "Sony a7iii"
 ISO: "320"
